# bofwebrpc

./: .clang-format  CMakeLists.txt  Dependencies.cmake  cmake_option.cmake  packaging.cmake  vcpkg-configuration.json  vcpkg.json
cmake/: compile.cmake  cpack_archive.cmake  cpack_deb.cmake  cpack_main.cmake  cpack_nsis.cmake  cpack_rpm.cmake  dearimgui.cmake  emscripten.cmake  export_version.cmake  fetch_content.cmake  grpc.cmake  install.cmake  thrift.cmake
doc/bofwebrpc/: readme.md
include/bofwebrpc/: bofgrpc.h  bofwebapp.h  bofwebclient.h  bofwebrpc.h  bofwebserver.h  bofwebsocket.h
src/: bofgrpc.cpp  bofwebapp.cpp  bofwebclient.cpp  bofwebrest.cpp  bofwebserver.cpp  bofwebsocket.cpp
tests/: CMakeLists.txt  web-clt.json  web-srv.json
tests/src/: main.cpp  ut_webapp.cpp  ut_webrpc.cpp
vcprj/: debug_linux_app.vcprj  debug_mp_launch.vcprj  debug_mp_task.vcprj  debug_windows_app.vcprj  vcprj.bat  vcprj.sh  vcprj_launch.json  vcprj_tasks.json  vcprj_var_def.BHA.json
